// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots BackIcon default 1`] = `
<div
  id="main"
  onClick={[Function]}
  onKeyDown={[Function]}
  role="button"
  tabIndex="0"
>
  <svg
    className="size-large"
    fill="currentColor"
    height="1em"
    stroke="currentColor"
    strokeWidth="0"
    style={
      Object {
        "color": undefined,
      }
    }
    viewBox="0 0 256 512"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
    />
  </svg>
  <div
    className="limit-width"
    data-cy="back-nav"
  >
    <p>
      Find another user
    </p>
  </div>
</div>
`;

exports[`Storyshots Dropdown default 1`] = `
<div
  className="dropdown"
  onKeyDown={[Function]}
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    aria-label={null}
    className="btn btn-secondary"
    id="dropdown"
    onClick={[Function]}
    type="button"
  >
    <div
      id="title"
    >
      Select a project
    </div>
    <div
      className="img"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 320 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
        />
      </svg>
    </div>
  </button>
  <div
    aria-hidden={true}
    className="dropdown-menu"
    data-cy="drop-down-menu"
    role="menu"
    tabIndex="-1"
  >
    <button
      className="dropdown-item"
      onClick={[Function]}
      role="menuitem"
      tabIndex="0"
      type="button"
    >
      System 1
    </button>
    <button
      className="dropdown-item"
      onClick={[Function]}
      role="menuitem"
      tabIndex="0"
      type="button"
    >
      System 2
    </button>
  </div>
</div>
`;

exports[`Storyshots InputField default 1`] = `
<input
  autoFocus={true}
  className="input-field my-2 form-control"
  disabled={false}
  name="idir"
  onChange={[Function]}
  onKeyPress={[Function]}
  placeholder="Enter IDIR username to find"
  type="text"
  value=""
/>
`;

exports[`Storyshots InputField disabled 1`] = `
<input
  autoFocus={true}
  className="input-field my-2 form-control"
  disabled={true}
  name="idir"
  onChange={[Function]}
  onKeyPress={[Function]}
  placeholder="Enter IDIR username to find"
  type="text"
  value=""
/>
`;

exports[`Storyshots InputField invalid 1`] = `
<input
  autoFocus={true}
  className="input-field my-2 is-invalid form-control"
  disabled={false}
  name="idir"
  onChange={[Function]}
  onKeyPress={[Function]}
  placeholder="Enter IDIR username to find"
  type="text"
  value="a"
/>
`;

exports[`Storyshots InputField valid 1`] = `
<input
  autoFocus={true}
  className="input-field my-2 is-valid form-control"
  disabled={false}
  name="idir"
  onChange={[Function]}
  onKeyPress={[Function]}
  placeholder="Enter IDIR username to find"
  type="text"
  value="IDIR/testuser"
/>
`;

exports[`Storyshots List Element empty 1`] = `
<div>
  <p>
    No projects
  </p>
</div>
`;

exports[`Storyshots List Element not properly added resources 1`] = `
<div
  className="project-div"
>
  <div
    className="project-list-item"
    id="project-info"
  >
    <strong
      className="large-size"
    >
      MALTD
    </strong>
    <p
      className="project-list-item"
      id="member-resources"
    >
      Member: 
      Share 
    </p>
    <p
      className="project-list-item"
      id="member-resources"
    >
      Not member: 
      Dyn
    </p>
    <p
      className="project-list-item"
      id="member-resources"
    >
      <b>
        Error:
      </b>
       
      error exists
    </p>
  </div>
  <div />
</div>
`;

exports[`Storyshots List Element properly added resources 1`] = `
<div
  className="project-div"
>
  <div
    className="project-list-item"
    id="project-info"
  >
    <strong
      className="large-size"
    >
      MALTD
    </strong>
    <p
      className="project-list-item"
      id="member-resources"
    >
      Member: 
      Dyn Share 
    </p>
    
  </div>
  <div />
</div>
`;

exports[`Storyshots List Element user 1`] = `
<div
  className="project-div"
>
  <div
    className="project-list-item"
    id="project-info"
  >
    <strong
      className="large-size"
    >
      User name
    </strong>
    <p
      className="project-list-item"
      id="email-info"
    >
      user@gov.bc.ca
    </p>
    
    
  </div>
  <div />
</div>
`;

exports[`Storyshots UserAccess default 1`] = `
<div
  className="move-down container"
>
  <div
    className="row"
    id="user-access-row"
  >
    <div
      className="cols col"
    >
      <div
        className="inner-row row"
      >
        <div
          className="big-font col"
        >
          USER
        </div>
      </div>
      <div
        className="project-div"
      >
        <div
          className="project-list-item"
          id="project-info"
        >
          <strong
            className="large-size"
          >
            User Name
          </strong>
          <p
            className="project-list-item"
            id="email-info"
          >
            user@gov.bc.ca
          </p>
          
          
        </div>
        <div />
      </div>
    </div>
    <div
      className="top-projects col"
      id="projects"
    >
      <div
        className="cols"
      >
        <div
          className="row"
        >
          <div
            className="big-font col"
          >
            CURRENT PROJECTS
          </div>
        </div>
        <div>
          <div
            className="project-div"
          >
            <div
              className="project-list-item"
              id="project-info"
            >
              <strong
                className="large-size"
              >
                Project1
              </strong>
              <p
                className="project-list-item"
                id="member-resources"
              >
                Member: 
                Dyn 
              </p>
              
            </div>
            <div>
              <svg
                className="pointer"
                fill="currentColor"
                height={32}
                onClick={[Function]}
                size={32}
                stroke="currentColor"
                strokeWidth="0"
                style={
                  Object {
                    "color": undefined,
                  }
                }
                viewBox="0 0 24 24"
                width={32}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zm2.46-7.12l1.41-1.41L12 12.59l2.12-2.12 1.41 1.41L13.41 14l2.12 2.12-1.41 1.41L12 15.41l-2.12 2.12-1.41-1.41L10.59 14l-2.13-2.12zM15.5 4l-1-1h-5l-1 1H5v2h14V4z"
                />
              </svg>
            </div>
          </div>
        </div>
        <div>
          <div
            className="project-div"
          >
            <div
              className="project-list-item"
              id="project-info"
            >
              <strong
                className="large-size"
              >
                Project2
              </strong>
              <p
                className="project-list-item"
                id="member-resources"
              >
                Member: 
                Dyn 
              </p>
              
            </div>
            <div>
              <svg
                className="pointer"
                fill="currentColor"
                height={32}
                onClick={[Function]}
                size={32}
                stroke="currentColor"
                strokeWidth="0"
                style={
                  Object {
                    "color": undefined,
                  }
                }
                viewBox="0 0 24 24"
                width={32}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zm2.46-7.12l1.41-1.41L12 12.59l2.12-2.12 1.41 1.41L13.41 14l2.12 2.12-1.41 1.41L12 15.41l-2.12 2.12-1.41-1.41L10.59 14l-2.13-2.12zM15.5 4l-1-1h-5l-1 1H5v2h14V4z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <br />
  <div
    className="outer row"
  >
    <div
      className="col"
    >
      <div
        className="drop-plus"
      >
        <div
          className="bcgov-form"
        >
          
          <div
            className="bcgov-dropdown-wrapper"
          >
            <svg
              className="fa-chevron-down"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              strokeWidth="0"
              style={
                Object {
                  "color": undefined,
                }
              }
              viewBox="0 0 448 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
              />
            </svg>
            <select
              className="bcgov-dropdown"
              data-testid="dropdown"
              id="dropdown"
              name="options"
              onChange={[Function]}
            >
              <option
                value="Select Project"
              >
                Select Project
              </option>
              <option
                value="System 1"
              >
                System 1
              </option>
              <option
                value="System 2"
              >
                System 2
              </option>
            </select>
          </div>
        </div>
      </div>
    </div>
    <div
      className="col"
    >
      
    </div>
  </div>
</div>
`;

exports[`Storyshots UserAccess no projects 1`] = `
<div
  className="move-down container"
>
  <div
    className="row"
    id="user-access-row"
  >
    <div
      className="cols col"
    >
      <div
        className="inner-row row"
      >
        <div
          className="big-font col"
        >
          USER
        </div>
      </div>
      <div
        className="project-div"
      >
        <div
          className="project-list-item"
          id="project-info"
        >
          <strong
            className="large-size"
          >
            User Name
          </strong>
          <p
            className="project-list-item"
            id="email-info"
          >
            user@gov.bc.ca
          </p>
          
          
        </div>
        <div />
      </div>
    </div>
    <div
      className="top-projects col"
      id="noProjects"
    >
      <div
        className="cols"
      >
        <div
          className="row"
        >
          <div
            className="big-font col"
          >
            CURRENT PROJECTS
          </div>
        </div>
        <div>
          <p>
            No projects
          </p>
        </div>
      </div>
    </div>
  </div>
  <br />
  <div
    className="outer row"
  >
    <div
      className="col"
    >
      <div
        className="drop-plus"
      >
        <div
          className="bcgov-form"
        >
          
          <div
            className="bcgov-dropdown-wrapper"
          >
            <svg
              className="fa-chevron-down"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              strokeWidth="0"
              style={
                Object {
                  "color": undefined,
                }
              }
              viewBox="0 0 448 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
              />
            </svg>
            <select
              className="bcgov-dropdown"
              data-testid="dropdown"
              id="dropdown"
              name="options"
              onChange={[Function]}
            >
              <option
                value="Select Project"
              >
                Select Project
              </option>
              <option
                value="System 1"
              >
                System 1
              </option>
              <option
                value="System 2"
              >
                System 2
              </option>
            </select>
          </div>
        </div>
        <div />
      </div>
    </div>
    <div
      className="col"
    >
      
    </div>
  </div>
</div>
`;

exports[`Storyshots UserSearch default 1`] = `
<div
  className="move-down"
>
  <p>
    Find a user by IDIR username and add them to or remove them from projects.
  </p>
  <p />
  <div
    className="inner"
  >
    <input
      autoFocus={true}
      className="input-field my-2 form-control"
      disabled={false}
      name="idir"
      onChange={[Function]}
      onKeyPress={[Function]}
      placeholder="Enter IDIR username to find"
      type="text"
      value=""
    />
    <p />
    <div
      className="error-btn-div"
    >
      <div />
      <div
        className="d-flex justify-content-end"
      >
        <button
          className="bcgov-button normal-blue btn"
          data-test-id=""
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Find
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots UserSearch invalid 1`] = `
<div
  className="move-down"
>
  <p>
    Find a user by IDIR username and add them to or remove them from projects.
  </p>
  <p />
  <div
    className="inner"
  >
    <input
      autoFocus={true}
      className="input-field my-2 is-invalid form-control"
      disabled={false}
      name="idir"
      onChange={[Function]}
      onKeyPress={[Function]}
      placeholder="Enter IDIR username to find"
      type="text"
      value="a"
    />
    <p />
    <div
      className="error-btn-div"
    >
      <div />
      <div
        className="d-flex justify-content-end"
      >
        <button
          className="bcgov-button normal-blue btn"
          data-test-id=""
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Find
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots UserSearch loading 1`] = `
<div
  className="move-down"
>
  <p>
    Find a user by IDIR username and add them to or remove them from projects.
  </p>
  <p />
  <div
    className="inner"
  >
    <div>
      <input
        autoFocus={true}
        className="input-field my-2 is-valid form-control"
        disabled={true}
        name="idir"
        onChange={[Function]}
        onKeyPress={[Function]}
        placeholder="Enter IDIR username to find"
        type="text"
        value="IDIR/validuser"
      />
      <p />
      <div>
        <div
          className="d-flex justify-content-end"
        >
          <button
            className="bcgov-button normal-blue btn"
            data-test-id=""
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            Find
            <div
              className="bcgov-loader-show"
            >
              <div
                className="loader-align"
              >
                <div
                  className="btn-loader"
                />
              </div>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots UserSearch user does not exist 1`] = `
<div
  className="move-down"
>
  <p>
    Find a user by IDIR username and add them to or remove them from projects.
  </p>
  <p />
  <div
    className="inner"
  >
    <div>
      <input
        autoFocus={true}
        className="input-field my-2 form-control"
        disabled={false}
        name="idir"
        onChange={[Function]}
        onKeyPress={[Function]}
        placeholder="Enter IDIR username to find"
        type="text"
        value=""
      />
      <p />
      <div
        className="error-btn-div"
      >
        <div
          className="float-left"
        >
          <small
            className="error-message"
            data-cy="error-text"
          />
        </div>
        <div
          className="d-flex justify-content-end"
        >
          <button
            className="bcgov-button normal-blue btn"
            data-test-id=""
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            Find
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots UserSearch valid 1`] = `
<div
  className="move-down"
>
  <p>
    Find a user by IDIR username and add them to or remove them from projects.
  </p>
  <p />
  <div
    className="inner"
  >
    <input
      autoFocus={true}
      className="input-field my-2 is-valid form-control"
      disabled={false}
      name="idir"
      onChange={[Function]}
      onKeyPress={[Function]}
      placeholder="Enter IDIR username to find"
      type="text"
      value="IDIR/validuser"
    />
    <p />
    <div
      className="error-btn-div"
    >
      <div />
      <div
        className="d-flex justify-content-end"
      >
        <button
          className="bcgov-button normal-blue btn"
          data-test-id=""
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Find
        </button>
      </div>
    </div>
  </div>
</div>
`;
